--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,125 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/******** For Header - Header.jsx ********/
+#heading {
+  height: 12vmin;
+  padding: 1.4vw 4vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+#logo {
+  width: 24vmin;
+}
+
+#menu {
+  width: 30vmin;
+  font-size: 2.4vmin;
+}
+
+/******** For Home Page - Main.jsx ********/
+#banner {
+  width: 100%;
+  opacity: .8; 
+  background-size: cover;
+  background-position: center;
+  height: 39vmax;
+}
+
+.contentRow {
+  position: relative;
+  top: -5.2vw;
+  width: 70%;
+  padding: 1vw;
+}
+
+#content > div > div {
+  position: relative;
+}
+
+.imgBlock {
+  position: relative;
+  background-size: cover;
+  width: 33.5vw;
+  height: 20vw;
+  filter: contrast(30%);
+}
+
+#content > div:last-child > div > img {
+  width:100%;
+}
+
+.txtCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/******** For Request Service Page - Form.jsx ********/
+#rs-bg {
+  width: 100%;
+  height: 47vmax;
+  object-fit: cover;
+  filter: contrast(30%);
+  clip-path:polygon(0 0, 100% 0, 100% 80%, 0 100%);
+}
+
+#formContainer {
+  position: relative;
+  top: -35vmax;
+}
+
+#formContainer > form {
+  width: 40vw;
+}
+
+
+
+/*************** For Phones ***************/
+@media screen and (max-width: 601px) {
+  /** For Header - Header.jsx **/
+  #heading {
+    height: 12vmax;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  #logo {
+    width: 25vmax;
   }
-  to {
-    transform: rotate(360deg);
+
+  /** For Home Page - Main.jsx **/
+  #banner {
+    height: 42vmin;
   }
+  .txtCenter {
+    font-size: 3.5vmin;
+  }
+  
+  /** For Request Service Page - Form.jsx **/
+  #rs-bg {
+    height:79vmax;
+    object-position: 0;
+  }
+  #formContainer {
+    top: -67vmax;
+    display: block!important;
+    margin: auto;
+    width: 70%;
+  }
+  #formContainer > div {
+    margin-right: 0!important;
+    margin-bottom: 6vh;
+    text-align: center;
+  }
+  #formContainer > div > h2{
+    font-size: 4vmax;
+    margin-bottom: 5vh!important;
+  }
+  #formContainer > div > h6{
+    font-size: 3vmin;
+  }
+  #formContainer > form {
+    width: 70vw;
+  }
+  
 }
